Updated Projects, added pious academic post

--- a/projects.html
+++ b/projects.html
@@ -55,8 +55,8 @@
           <h2>David's Projects</h2>
           <p> Hey! Thanks for checking on my projects page! I recently created a website called <a href="http://www.abilitypowerparity.com">abilitypowerparity.com</a>. I put this together for the Riot API Challenge 2.0 - you can read about the contest itself and the work behind my entry over at my progress blog for this entry <a href="/blog/Riot-API-Challenge-2.0">here</a>, and you can see a full technical breakdown behind the project on my github <a href="https://github.com/David4Danger/Ability-Power-Parity---Riot-API-Challenge-2.0">here</a>.</p>
           <p>I broke down 400,000 unique dictionaries obtained from an API in Python and then used some HTML, CSS, and JS/JQuery code to put together a working demo on the website. I hope you'll read more on my blog, github, and of course the actual website!</p>
-          <p>Check out this reddit comment simulator I have going <a href="/commentgenerator.html">here!</a> It generates new comments using Javascript/JQuery from a list of some of my personal from comments from both reddit and across the web. The list grows!</p>
-          <p>I'm also currently building a poker simulator, as I really enjoy breaking down the math behind the game.<br><br> Check back in the fall for more updates on my projects!</p>
+          <p>Check out this reddit comment simulator I have going <a href="/commentgenerator.html">here!</a> It generates new comments using Javascript/JQuery from a list of some of my personal favourite comments from both reddit and across the web. The list grows!</p>
+          <p>I've also spearheaded a python public library to use with the new Halo 5 API, you can find the repository <a href="https://github.com/David4Danger/16807-Pious-Academic">here!</a></p>
         </div>
       </div>
       <div class="watlogo">
