Updated index text and resume, pushing to s3

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    
+
       ga('create', 'UA-66163034-1', 'auto');
       ga('send', 'pageview');
     </script>
@@ -29,11 +29,13 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" property="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <!--Metadata--> 
-    <meta name="keywords" content="david skudra, computer science, math, waterloo, student, canada, python, c++, software developer, software">
-    <meta name="description" content="David Skudra's Personal Website">
+    <!--Metadata-->
+    <meta name="keywords" content="david skudra, computer science, math, waterloo, student, canada, python, c++, software developer, software, nasa">
+    <meta name="description" content="David Skudra's Personal Webpage">
 </head>
 
+
+<!-- I realize the below is an abomination. 2016 was an interesting year. -->
 <body>
 	<div id="outer">
 		<div id="content" class="not-visible">
@@ -80,7 +82,8 @@
 							<div class="col-md-8">
 								<center><h1>Hey! My name is David Skudra.</h1><br>
 								<h3>I'm a builder. I've always had a passion for piecing things together, from a Lego model to my latest programming works. You could say that I'm in the business of <asd class="special">connecting the dots.</asd></h3>
-								<h3>I'm a University of Waterloo student. Studying Computer Science is a lot more than just learning to program, it's learning how to <asd class="special">solve problems.</asd> Don't just celebrate the existance of code, but the solutions it creates.</h3>
+								<h3>I'm a University of Waterloo student. Of course, studying Computer Science is not just learning how to program, it's learning how to <asd class="special">solve problems.</asd></h3>
+							  <h3>I'm currently working as a Software Engineering Intern at the <asd class="special">NASA Ames Research Center</asd> in Mountain View, California. </h3>
 								<br><h5 class="button" id="first">WHAT I DO</h5></center>
 							</div>
 							<div class="col-md-2">
@@ -128,12 +131,12 @@
 							<div class="col-md-4">
 								<center><h1>Developing</h1>
 								<i class="fa fa-code fa-2x"></i>
-								<h4>I believe that <asd class="special">developing is the same as building,</asd> so naturally I love to develop things in some of my favourite languages, like C++ and Python.</h4></center>
+								<h4>I believe that <asd class="special">developing is the same as building,</asd> so naturally I love to develop things in some of my favourite languages, like C++.</h4></center>
 							</div>
 							<div class="col-md-4">
 								<center><h1>Designing</h1>
 								<i class="fa fa-paint-brush fa-2x"></i>
-								<h4><asd class="special">We are visual beings.</asd> We process information based on what we see, so I make sure to appeal to that, through a comment in my code or a display process for a project.</h4></center>
+								<h4><asd class="special">We are visual beings.</asd> We process information based on what we see, so I make sure to appeal to that, through comments in my work or documentation for my projects.</h4></center>
 							</div>
 							<div class="col-md-2">
 							</div>
@@ -144,12 +147,12 @@
 							<div class="col-md-4">
 								<center><h1>Open Source</h1>
 								<i class="fa fa-lightbulb-o fa-2x"></i>
-								<h4>I love working with open source projects, whether it's my own or someone else's. Open source is important to me because <asd class="special">collaboration brings about the best in our code.</asd></h4></center>
+								<h4>I love working with open source projects. Open source is important to me because <asd class="special">collaboration brings about the best in our code.</asd></h4></center>
 							</div>
 							<div class="col-md-4">
 								<center><h1>Stay Hungry</h1>
 								<i class="fa fa-flag-checkered fa-2x"></i>
-								<h4>I'm not satisfied with par for the course. It doesn't matter if I'm writing a new class or playing a game of baseball, <asd class="special">I strive for excellence</asd> in everything I do.</h4></center>
+								<h4>I'm not satisfied with par for the course. It doesn't matter if I'm programming, playing baseball, or hitting the gym; <asd class="special">I strive for excellence</asd> in everything I do.</h4></center>
 							</div>
 							<div class="col-md-2">
 							</div>
