Somehow lost the .pdf part of an href?

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						  					<i class="fa fa-linkedin fa-stack-1x faH"></i>
 										</span>
 									</a>
-									<a href="/resume" class="Rlink">
+									<a href="/resume.pdf" class="Rlink">
 										<span class="fa-stack fa-3x">
 											<i class="fa fa-circle fa-stack-2x icon-background faH"></i>
 											<i class="fa fa-file-pdf-o fa-stack-1x faH"></i>
