Updated page to reflect graduation, added new resume

--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
 							<div class="col-md-8">
 								<center><h1>Hey! My name is David Skudra.</h1><br>
 								<h3>I'm a builder. I've always had a passion for piecing things together, from a Lego model to my latest programming works. You could say that I'm in the business of <asd class="special">connecting the dots.</asd></h3>
-								<h3>I'm a University of Waterloo student. Of course, studying Computer Science is not just learning how to program, it's learning how to <asd class="special">solve problems.</asd></h3>
-							  <h3>I'm currently working as a Software Engineering Intern at <asd class="special">Verizon</asd>.</h3>
-								<br><h5 class="button" id="first">WHAT I DO</h5></center>
+							  <h3>I've recently graduated from the University of Waterloo, and I'm currently working as a Software Engineer at <asd class="special">Capital One</asd>.</h3>
+								<!---<br><h5 class="button" id="first">WHAT I DO</h5></center>--->
 							</div>
 							<div class="col-md-2">
 							</div>
