--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 											<i class="fa fa-github fa-stack-1x faH"></i>
 										</span>
 									</a>
-									<a href="https://twitter.com/davidfromca" class="Tlink">
+									<a href="https://www.instagram.com/davidskudra/" class="ILink">
 										<span class="fa-stack fa-3x">
 											<i class="fa fa-circle fa-stack-2x icon-background faH"></i>
-											<i class="fa fa-twitter fa-stack-1x faH"></i>
+											<i class="fa fa-instagram fa-stack-1x faH"></i>
 										</span>
 									</a>
 								</div></center>
@@ -113,10 +113,10 @@
 										<i class="fa fa-github fa-stack-1x faH"></i>
 									</span>
 								</a>
-								<a href="https://twitter.com/davidfromca" class="Tlink">
+								<a href="https://www.instagram.com/davidskudra/" class="ILink">
 									<span class="fa-stack fa-3x">
 										<i class="fa fa-circle fa-stack-2x icon-background faH"></i>
-										<i class="fa fa-twitter fa-stack-1x faH"></i>
+										<i class="fa fa-instagram fa-stack-1x faH"></i>
 									</span>
 								</a>
 							</div></center>
