--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 							<div class="col-md-8">
 								<center><h1>Hey! My name is David Skudra.</h1><br>
 								<h3>I'm a builder. I've always had a passion for piecing things together, from a Lego model to my latest programming works. You could say that I'm in the business of <asd class="special">connecting the dots.</asd></h3>
-							  <h3>I've recently graduated from the University of Waterloo, and I'm currently working as a Software Engineer at <asd class="special">Capital One</asd>.</h3>
+							  <h3>I graduated from the University of Waterloo in early 2019, and I'm currently working as a Software Engineer at <asd class="special">Capital One</asd>, where I spend most of my time taking hammer to steel with Java, AWS, or something inbetween.</h3>
+								<h3>Check out my resume and contact me there if you'd like to chat!</h3>
 								<!---<br><h5 class="button" id="first">WHAT I DO</h5></center>--->
 							</div>
 							<div class="col-md-2">
